# semanticache

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
dashboard/: __init__.py  app.py
dashboard/static/: index.html  main.js  style.css
docs/: api-reference.md  architecture.md  benchmarks.md  configuration.md  getting-started.md  security.md
examples/: basic_usage.py  openai_example.py  redis_example.py
semanticache/: __init__.py  cli.py  core.py  security.py  strategies.py
semanticache/backends/: __init__.py  memory.py  redis.py
semanticache/embedders/: __init__.py  openai.py  sentence_transformers.py
semanticache/middleware/: __init__.py  litellm_compat.py  openai_compat.py
semanticache/utils/: __init__.py  metrics.py
tests/: test_backends.py  test_cli.py  test_core.py  test_embedders.py  test_integration.py  test_metrics.py  test_security.py  test_strategies.py
