[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semanticache"
version = "0.1.0"
description = "Production-grade semantic caching middleware for LLMs — reduce API costs by 30-60%"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Zijian Ni", email = "zijian@semanticache.dev" },
]
keywords = ["llm", "cache", "semantic", "openai", "anthropic", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
redis = ["redis>=5.0.0"]
litellm = ["litellm>=1.0.0"]
dashboard = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "websockets>=12.0"]
all = ["semanticache[openai,redis,litellm,dashboard]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ZijianNi/semanticache"
Documentation = "https://github.com/ZijianNi/semanticache/docs"
Repository = "https://github.com/ZijianNi/semanticache"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
