[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semanticache"
version = "0.2.0"
description = "Production-grade semantic caching middleware for LLMs — reduce API costs by 30-60%"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Zijian Ni", email = "zijian@semanticache.dev" },
]
keywords = ["llm", "cache", "semantic", "openai", "anthropic", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
redis = ["redis>=5.0.0"]
litellm = ["litellm>=1.0.0"]
dashboard = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "websockets>=12.0"]
security = ["cryptography>=41.0.0"]
cli = ["typer>=0.9.0", "rich>=13.0.0"]
all = ["semanticache[openai,redis,litellm,dashboard,security,cli]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
semanticache = "semanticache.cli:main"

[project.urls]
Homepage = "https://github.com/Zijian-Ni/semanticache"
Documentation = "https://github.com/Zijian-Ni/semanticache/docs"
Repository = "https://github.com/Zijian-Ni/semanticache"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
